Updated Windows Installation script